--- a/Newotopark/HTML/veresiye.html
+++ b/Newotopark/HTML/veresiye.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="tr">
 
     <head>
         <meta charset="UTF-8">
@@ -36,15 +36,15 @@
                     </div>
                 </a>
 
-                <a href="islem.html">
-                    <div class="item">
-                        İşlem Geçmişi
-                    </div>
-                </a>
-
                 <div class="flex visible">
+                    <a href="islem.html">
+                        <div class="item">
+                            İşlem Geçmişi
+                        </div>
+                    </a>
 
-                    
+
+
                     <a href="liste.html" target="_blank">
                         <div class="item" id="liste_count">
 
@@ -59,8 +59,9 @@
         </nav>
 
 
-        <div class="input-box">
+        <div class="input-box flex">
             <input type="text" id="veresiye-input">
+            <p class="veresiye-toplam" id="toplam">0</p>
 
         </div>
 
