--- a/Newotopark/HTML/liste.html
+++ b/Newotopark/HTML/liste.html
@@ -23,7 +23,7 @@
 
         
         <div class="liste" id="liste">
-            <button onclick="yazdir()" id="yazdir" class="yazdır">Yazdır</button>
+            <button onclick="yazdir()" id="yazdir" class="yazdır">Yazdır <span style="color: red; border-left: 2px solid red;"> &nbsp  Yazıcıyı Canon Seçmeyi Unutma !</span> </button>
 
         </div>
 
