--- a/Newotopark/HTML/veresiye.html
+++ b/Newotopark/HTML/veresiye.html
@@ -17,7 +17,7 @@
         <title>NKO - Veresiye</title>
     </head>
 
-    <body>
+    <body onload="focusinput()">
 
 
         <nav class="fis-out">
